student course connection and access key