@@ -1,5 +1,6 @@
 package hu.bme.aut.viauma06.language_learning.service;
 
+import hu.bme.aut.viauma06.language_learning.controller.exceptions.BadRequestException;
 import hu.bme.aut.viauma06.language_learning.controller.exceptions.InternalServerErrorException;
 import hu.bme.aut.viauma06.language_learning.controller.exceptions.NotFoundException;
 import hu.bme.aut.viauma06.language_learning.mapper.CourseMapper;
@@ -10,11 +11,10 @@ import hu.bme.aut.viauma06.language_learning.model.dto.request.WordPairRequest;
 import hu.bme.aut.viauma06.language_learning.model.dto.response.CourseDetailsResponse;
 import hu.bme.aut.viauma06.language_learning.model.dto.response.CourseResponse;
 import hu.bme.aut.viauma06.language_learning.model.dto.response.WordPairResponse;
-import hu.bme.aut.viauma06.language_learning.repository.CourseRepository;
-import hu.bme.aut.viauma06.language_learning.repository.RoleRepository;
-import hu.bme.aut.viauma06.language_learning.repository.UserRepository;
-import hu.bme.aut.viauma06.language_learning.repository.WordPairRepository;
+import hu.bme.aut.viauma06.language_learning.repository.*;
 import hu.bme.aut.viauma06.language_learning.security.service.LoggedInUserService;
+import hu.bme.aut.viauma06.language_learning.service.util.EmailValidator;
+import hu.bme.aut.viauma06.language_learning.service.util.RandomStringGenerator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -40,7 +40,13 @@ public class CourseService {
     private RoleRepository roleRepository;
 
     @Autowired
+    private CourseStudentAccessRepository courseStudentAccessRepository;
+
+    @Autowired
     private LoggedInUserService loggedInUserService;
+
+    @Autowired
+    private SendMail sendMail;
 
     public List<CourseResponse> getAllCoursesForTeacher() {
         User loggedInUser = loggedInUserService.getLoggedInUser();
@@ -74,10 +80,8 @@ public class CourseService {
         }
 
         List<User> existingUsers = userRepository.findAllByEmailIn(courseDetailsRequest.getStudentEmails());
-        List<String> existingEmails = existingUsers.stream().map(User::getEmail).collect(Collectors.toList());
+        List<String> existingEmails = existingUsers.stream().map(User::getEmail).toList();
         courseDetailsRequest.getStudentEmails().removeAll(existingEmails);
-
-        // TODO validate emails
 
         Optional<Role> studentRole = roleRepository.findByName(ERole.ROLE_STUDENT);
 
@@ -85,23 +89,65 @@ public class CourseService {
             throw new InternalServerErrorException("User role not found");
         }
 
+        List<String> invalidEmails = courseDetailsRequest.getStudentEmails()
+                .stream()
+                .filter(e -> !EmailValidator.validateEmail(e))
+                .collect(Collectors.toList());
+
+        if (!invalidEmails.isEmpty()) {
+            throw new BadRequestException("Invalid email(s): " + String.join(", ", invalidEmails));
+        }
+
+        Course storedCourse = course.get();
+
         List<User> newStudents = courseDetailsRequest.getStudentEmails()
                 .stream()
                 .map(e -> new User(null, e, null, Set.of(studentRole.get())))
                 .collect(Collectors.toList());
 
-        userRepository.saveAll(newStudents);
+        newStudents.forEach(s -> {
+            s.setCourses(List.of(storedCourse));
+            s.setCourseAccess(List.of(new CourseStudentAccess(s, storedCourse, RandomStringGenerator.generate(10))));
+        });
+
+        userRepository.saveAllAndFlush(newStudents);
+
+        newStudents.forEach(s -> {
+            s.getCourseAccess().get(0).setId(new CourseStudentAccessKey(s.getId(), storedCourse.getId()));
+        });
 
         existingUsers.addAll(newStudents);
 
-        Course storedCourse = course.get();
         storedCourse.setDeadline(courseDetailsRequest.getDeadline());
         storedCourse.setName(courseDetailsRequest.getName());
         storedCourse.setStudents(existingUsers);
-
         courseRepository.save(storedCourse);
 
-        // TODO send mail
+        List<CourseStudentAccess> courseStudentAccessList = existingUsers.stream().map(u -> {
+            CourseStudentAccess courseStudentAccess = u.getCourseAccess().stream().filter(
+                    c -> c.getCourse().equals(storedCourse)
+            ).findFirst().orElseThrow(() -> new NotFoundException("Course not found"));
+            if (courseStudentAccess.getAccessKey() == null) {
+                courseStudentAccess.setAccessKey(RandomStringGenerator.generate(10));
+            }
+            return courseStudentAccess;
+        }).collect(Collectors.toList());
+
+        courseStudentAccessRepository.saveAll(courseStudentAccessList);
+
+        // TODO separate thread
+//        newStudents.forEach(s -> {
+//            sendMail.sendSimpleMessage(
+//                    s.getEmail(),
+//                    "Registration to " + storedCourse.getName() + " language course",
+//                    "Hi! "
+//                            + storedCourse.getTeacher().getName()
+//                            + "registered you to "
+//                            + storedCourse.getName()
+//                            + " language course! You can log in with your email and this password: "
+//                            + "TODO" // TODO password
+//            );
+//        });
 
         return CourseMapper.INSTANCE.courseToCourseDetailsResponse(storedCourse);
     }
@@ -119,6 +165,12 @@ public class CourseService {
     }
 
     public List<WordPairResponse> getWordPairsByCourseId(Integer id) {
+        User loggedInUser = loggedInUserService.getLoggedInUser();
+        Optional<Course> course = courseRepository.findByIdAndTeacher(id, loggedInUser);
+        if (course.isEmpty()) {
+            throw new NotFoundException("Course not found");
+        }
+
         List<WordPair> wordPairs = wordPairRepository.findAllByCourseId(id);
 
         return wordPairs.stream().map(w -> WordPairMapper.INSTANCE.wordPairToWordPairResponse(w)).collect(Collectors.toList());
@@ -135,7 +187,7 @@ public class CourseService {
 
         Course storedCourse = course.get();
 
-        List<WordPair> newWords = wordPairsRequest.stream().map(w -> new WordPair(w.getWord(), w.getTranslation())).collect(Collectors.toList());
+        List<WordPair> newWords = wordPairsRequest.stream().map(w -> new WordPair(w.getWord(), w.getTranslation(), w.getMetadata())).collect(Collectors.toList());
         newWords.forEach(w -> w.setCourse(storedCourse));
 
         wordPairRepository.deleteAllInBatch(storedCourse.getWords());
